--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Title)
-            @*@Html.ValidationMessageFor(model => model.Title)*@
+            @Html.ValidationMessageFor(model => model.Title)
         </div>
         <div class="clear"></div>
 
@@ -28,23 +28,22 @@
         </div>
         <div class="editor-field">
             @Html.TextAreaFor(model => model.Details)
-            @*@Html.ValidationMessageFor(model => model.Details)*@
+            @Html.ValidationMessageFor(model => model.Details)
         </div>
         <div class="clear"></div>
-
 
         <div class="editor-label">
             @Html.LabelFor(model => model.MaxScore) <em>*</em>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.MaxScore)
-            @*@Html.ValidationMessageFor(model => model.MaxScore)*@
+            @Html.ValidationMessageFor(model => model.MaxScore)
         </div>
         <div class="clear"></div>
 
 
-        <p>
-            <input class="" type="submit" value="Create" />
+        <p class="button-container">
+            <input class="form-button" type="submit" value="Create" />
         </p>
     </fieldset>
 }
