--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
@@ -5,27 +5,59 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    #Assessment-Task-Details-View label
+    {
+        float: left;
+        width: 120px;
+        font-weight: bold;
+    }
+
+    #Assessment-Task-Details-View span
+    {
+        float: left;
+        max-width: 600px;
+        margin-bottom: 1em;
+    }
+
+    #Assessment-Task-Details-View .links
+    {
+        margin-top:2em;
+    }
+</style>
+
+
 <div id="Assessment-Task-Details-View">
     <h2>Assessment Task Details</h2>
 
     @Html.HiddenFor(m => m.Id)
 
-    @Html.LabelFor(m => m.Title): @Html.DisplayFor(m => m.Title)
+    @Html.LabelFor(m => m.Title) <span>@Html.DisplayFor(m => m.Title)</span>
     <div class="clear"></div>
 
-    @Html.LabelFor(m => m.Details): @Html.DisplayFor(m => m.Details)
+    @Html.LabelFor(m => m.Details) <span>@Html.DisplayFor(m => m.Details)</span>
     <div class="clear"></div>
 
-    @Html.LabelFor(m => m.MaxScore): @Html.DisplayFor(m => m.MaxScore)
+    @Html.LabelFor(m => m.MaxScore) <span>@Html.DisplayFor(m => m.MaxScore)</span>
     <div class="clear"></div>
+
+
+    <p class="links">@Html.ActionLink("Back to List","Index")
+        @if (Model.Editable) {
+            @:&nbsp;|&nbsp; 
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id });
+            @:&nbsp;|&nbsp;
+            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class="link-delete"});
+        }
+    </p>
+
 </div>
 
-<p>@Html.ActionLink("Back to List","Index")
-    @if (Model.Editable) {
-        @:&nbsp;|&nbsp; 
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id });
-        @:&nbsp;|&nbsp;
-        @Html.ActionLink("Delete", "Delete", new { id = Model.Id });
-    }
 
-</p>
+@section Scripts {
+    <script>
+        $('.link-delete').on('click', function(e){
+            return confirm('Are you sure you want to delete this Assessment Task?');
+        })
+    </script>
+}
