Adde Examiner Login

--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <div class="right">
                     <div id="login-area">
                         <ul>
-                            <li><a id="logout" href="#">Logout</a></li>
+                            <li>@Html.ActionLink("Logout", "Logout", "Examiner", new { }, new { id = "logout" })</li>
                         </ul>
                     </div>
                 </div>
