--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
@@ -8,6 +8,8 @@
 
 <h1>Pilot Practical Templates</h1>
 
+@Html.ActionLink("Add new template", "Create")<br /><br/>
+
 <table>
     <thead>
         <tr>
