--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Create.cshtml
@@ -9,7 +9,7 @@
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(false)
 
     <fieldset>
         <legend>Create</legend>
@@ -23,7 +23,7 @@
         </div>
         <div class="clear"></div>
 
-        <p>
+        <p class="button-container">
             <input type="submit" value="Create" class="form-button" />
         </p>
     </fieldset>
