--- a/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
@@ -9,7 +9,7 @@
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(false)
 
     <fieldset>
         <legend>Create</legend>
