--- a/APFTestingUI/Views/Practical/PackerInput.cshtml
+++ b/APFTestingUI/Views/Practical/PackerInput.cshtml
@@ -46,14 +46,14 @@
         </div>
         <div class="clear"></div>
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.CanopyTypeSerialNumber)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.CanopyTypeSerialNumber)
             @Html.ValidationMessageFor(model => model.CanopyTypeSerialNumber)
         </div>
-        <div class="clear"></div>
+        <div class="clear"></div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerType)
@@ -73,14 +73,14 @@
         </div>
         <div class="clear"></div>
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerSerialNumber)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.HarnessContainerSerialNumber)
             @Html.ValidationMessageFor(model => model.HarnessContainerSerialNumber)
         </div>
-        <div class="clear"></div>
+        <div class="clear"></div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Note)
