--- a/APFTestingUI/Views/Practical/PackerEdit.cshtml
+++ b/APFTestingUI/Views/Practical/PackerEdit.cshtml
@@ -47,14 +47,14 @@
         </div>
         <div class="clear"></div>
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.CanopyTypeSerialNumber)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.CanopyTypeSerialNumber)
             @Html.ValidationMessageFor(model => model.CanopyTypeSerialNumber)
         </div>
-        <div class="clear"></div>
+        <div class="clear"></div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerType)
@@ -74,14 +74,14 @@
         </div>
         <div class="clear"></div>
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => model.HarnessContainerSerialNumber)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.HarnessContainerSerialNumber)
             @Html.ValidationMessageFor(model => model.HarnessContainerSerialNumber)
         </div>
-        <div class="clear"></div>
+        <div class="clear"></div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Note)
