worked on preventing the editing and deletion of questions with constrainsts, as well as completing the questiond deletion functionality

--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
@@ -48,12 +48,12 @@
                         @if (question.editableOrDeletable)
                         {
                             <td>
-                                Html.ActionLink(question.Description, "EditPilot", new { questionId = question.Id });
+                                @Html.ActionLink(question.Description, "EditPilot", new { questionId = question.Id })
                             </td>
                         }
                         else
                         {
-                            <td>question.Description</td>
+                            <td>@question.Description</td>
                         }
                         
                     </tr>
