--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -9,7 +9,7 @@
 
 @using (Html.BeginForm())
 {
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(false)
     
     @Html.HiddenFor(model => model.Id);
     
@@ -62,7 +62,11 @@
         </tbody>
     </table>
     
-    @Html.ActionLink("Delete", "DeletePilot", new { }, new { id = "delete" });
+    if (Model.editableOrDeletable)
+    {
+        @Html.ActionLink("Delete", "DeletePilot", new { questionId = Model.Id }, new { id = "delete" });
+    }
+    
     
     <input type="submit" value="Create" class="form-button" />
 }
