--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -25,7 +25,7 @@
         @Html.LabelFor(model => model.Description) <em>*</em>
     </div>
     <div class="editor-field">
-        @Html.EditorFor(model => model.Description)
+        @Html.TextAreaFor(model => model.Description)
     </div>
     <div class="clear"></div>
 
