--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/IndexPilot.cshtml
@@ -8,7 +8,7 @@
 <h2>IndexPilot</h2>
 
 <div>
-    <a href="#">
+    <a href='@Url.Action("CreatePilot")'>
         ADD
     </a>
 </div>
@@ -30,19 +30,19 @@
                 {
                     <tr>
                         <td>
+                            @{ string img = ""; }
                             @switch (question.IsActive)
                             {
                                 case true:
-                                    <a href="#">
-                                        ON
-                                    </a>
+                                    img = "Deactivate";
                                     break;
                                 case false:
-                                    <a href="#">
-                                        OFF
-                                    </a>
+                                    img = "Activate";
                                     break;
                             }
+                            <a href='@Url.Action("ToggleActivationPilot", new { questionId = question.Id })'>
+                                @img
+                            </a>
                         </td>
                         
                         @if (question.editableOrDeletable)
