fixed exam history JS for IE9. Added cookie for ExamId in Start Exam

--- a/APFTestingUI/Views/Exam/Start.cshtml
+++ b/APFTestingUI/Views/Exam/Start.cshtml
@@ -27,7 +27,7 @@
         <li>Good luck!</li>
     </ul>
     <br />
-    <p>@Html.ActionLink("Start Exam", "FirstQuestion", new { examId = Model.ExamId }, new { @class = "button"})</p>
+    <p>@Html.ActionLink("Start Exam", "FirstQuestion", new { }, new { @class = "button"})</p>
 
     <br />
 
