--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
@@ -7,6 +7,8 @@
 
 <h1>Packer Practical Templates</h1>
 
+<h3>@ViewBag.displayMessage</h3><br />
+
 @Html.ActionLink("Add new template", "Create")<br /><br/>
 
 <table>
@@ -27,7 +29,7 @@
 
             <tr>
                 <td>@rowNumber</td>
-                <td>@template.IsActive</td>
+                <td>@template.IsActiveText</td>
                 <td>@template.NumOfRequiredAssessmentTasks</td>
                 <td>
                     @if (template.AllowEditOrDelete)
