--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
@@ -8,6 +8,8 @@
 
 <h1>Pilot Practical Templates</h1>
 
+<h3>@ViewBag.displayMessage</h3><br />
+
 @Html.ActionLink("Add new template", "Create")<br /><br/>
 
 <table>
@@ -27,7 +29,7 @@
         {
             <tr>
                 <td>@rowNumber</td>
-                <td>@Model.Templates[i].IsActive</td>
+                <td>@Model.Templates[i].IsActiveText</td>
                 <td class="toggle"><span>Click to expand Tasks</span><br />
                     <ul class="hidden tasks">
                         @for (int j = 0; j < Model.Templates[i].Tasks.Count; j++)
@@ -42,12 +44,12 @@
                     {
                         @Html.ActionLink("Edit", "Edit", new { templateId = Model.Templates[i].Id })
                         <text>|</text>
-                        @Html.ActionLink("Delete", "Delete", new { templateId = Model.Templates[i].Id }, new { @class = "template-delete" })
+                        @Html.ActionLink("Delete", "Delete", new { templateId = Model.Templates[i].Id }, new { @class = "delete" })
                     }
                     @if (!Model.Templates[i].IsActive)
                     {
                         <text>|</text>
-                        @Html.ActionLink("Activate", "Activate", new { templateId = Model.Templates[i].Id }, new { @class = "template-activate" })
+                        @Html.ActionLink("Activate", "Activate", new { templateId = Model.Templates[i].Id }, new { @class = "activate" })
                     }
                 </td>
             </tr>
@@ -57,5 +59,5 @@
 </table>
 
 @section scripts {
-    <script src="~/Scripts/practical-template.js"></script>
+    <script src="~/Scripts/administration.js"></script>
 }
