--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -37,6 +37,13 @@
     </div>
     <div class="clear"></div>
     
+    <div>
+        @{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
+        <img src="@Url.Content(path)" alt="question image"/>
+    </div>
+    
+    @Html.HiddenFor(model => model.ImagePath);
+    
     <span id="add-answer">Add</span>
     <table id="answers-table">
         <thead>
