--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/EditPilot.cshtml
@@ -7,7 +7,7 @@
 
 <h2>EditPilot</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditPilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(false)
     
@@ -39,9 +39,21 @@
     
     <div>
         @{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
-        <img src="@Url.Content(path)" alt="question image"/>
+        @if (Model.ImagePath != null)
+        {
+            <img src="@Url.Content(path)" alt="question image"/>
+        }
+        
+        
     </div>
     
+    <div class="editor-label">
+        Image <em>*</em>
+    </div>
+    <div class="editor-field">
+        <input type="file" name="ImageFile" accept="image/*" />
+    </div>
+    <div class="clear"></div>
     @Html.HiddenFor(model => model.ImagePath);
     
     <span id="add-answer">Add</span>
