Enabled user authentication and logon/logoff

--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
@@ -10,7 +10,8 @@
 @using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(false)
-    
+    @Html.AntiForgeryToken()
+
     <div class="editor-label">
         @Html.LabelFor(model => model.Description) <em>*</em>
     </div>
