--- a/APFTestingUI/Views/Candidate/EditPacker.cshtml
+++ b/APFTestingUI/Views/Candidate/EditPacker.cshtml
@@ -8,6 +8,7 @@
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
+    @Html.AntiForgeryToken()
 
     <fieldset>
         <legend>Edit Packer</legend>
