--- a/APFTestingUI/Views/Practical/PackerEdit.cshtml
+++ b/APFTestingUI/Views/Practical/PackerEdit.cshtml
@@ -13,7 +13,7 @@
 @using (Html.BeginForm("PackerEdit", "Practical", new { taskId = Model.TaskId }, FormMethod.Post, new { id = "form-packer-edit" }))
 {
     @Html.ValidationSummary(false)
-
+    @Html.AntiForgeryToken()
     <fieldset>
         <legend>PackerEdit</legend>
 
