--- a/APFTestingUI/Areas/Administration/Views/Examiner/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Create.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
+    @Html.AntiForgeryToken()
 
     <fieldset>
         <legend>Create</legend>
