--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
@@ -10,6 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(false)
+    @Html.AntiForgeryToken()
     
     <div class="editor-label">
         @Html.LabelFor(model => model.Description) <em>*</em>
