--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -13,6 +13,7 @@
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
+    @Html.AntiForgeryToken()
 
     <fieldset>
         <legend>Create</legend>
